test/sema/pointer-to-rvalue.delta.output
pointer-to-rvalue.delta:7:17: error: cannot assign 'int' to 'int*'
    int* p = foo();
                ^
