test/sema/pointer-to-rvalue.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

int foo() { return 42; }

void main() {
    // CHECK: [[@LINE+1]]:17: error: cannot initialize variable of type 'int*' with 'int'
    int* p = foo();
}
